# backend/lang/pt_BR/validation.php
@@ -5,11 +5,17 @@ return [
     'max' => [
         'string' => 'O campo :attribute não pode ter mais de :max caracteres.',
     ],
+    'min' => [
+        'string' => 'O campo :attribute deve ter pelo menos :min caracteres.',
+    ],
+    'password' => 'A senha deve ter pelo menos :min caracteres.',
     'required' => 'O campo :attribute é obrigatório.',
     'string' => 'O campo :attribute deve ser um texto.',
+    'unique' => 'O campo :attribute já está em uso.',
     'attributes' => [
         'deviceName' => 'nome do dispositivo',
         'email' => 'e-mail',
+        'name' => 'nome',
         'password' => 'senha',
     ],
 ];
